--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         body {
             font-family: 'Comic Sans MS', cursive, sans-serif;
             text-align: center;
-            background: url('https://imgur.com/GNugBdH.jpg') no-repeat center center fixed;
-            background-size: cover;
+            background: url('https://i.imgur.com/GNugBdH.jpg') no-repeat center center fixed; background-size: cover;
             color: limegreen;
             font-weight: bold;
+            text-shadow: 2px 2px 4px #000000; /* Sombra para el texto del cuerpo */
         }
         h1 {
             font-family: 'Comic Sans MS', cursive, sans-serif;
@@ -19,6 +19,7 @@
             color: red;
             font-weight: bold;
             text-transform: uppercase;
+            text-shadow: 3px 3px 6px #000000; /* Sombra para el texto del encabezado */
         }
         img {
             max-width: 50%;
@@ -27,16 +28,23 @@
         a {
             color: limegreen;
             font-weight: bold;
+            text-shadow: 1px 1px 2px #000000; /* Sombra para el texto de los enlaces */
         }
     </style>
 </head>
 <body>
-    <audio autoplay loop>
-        <source src="https://on.soundcloud.com/UCCPdHGDw1XWuhYG9" type="audio/mp4">
-        Your browser does not support the audio element.
-    </audio>
-    <h1>UwU~ Oopsie! You got Pwned! ~UwU</h1>
-    <img src="https://imgur.com/GNugBdH.jpg" alt="Background Image">
-    <p>Click <a href="https://example.com">here</a> to go back.</p>
+    <iframe src="https://drive.google.com/file/d/1uXs-h1sgmgj4AbZuIwGDEBbKZTWEDpIy/preview" width="0" height="0" allow="autoplay"></iframe>
+    <h1>UWU~ OOPSIE! YOU GOT PWNED! ~UWU</h1>
+    <img src="https://i.imgur.com/0Q6Xofk.jpg" alt="Kawaii Hacker Neko" />
+    <p>Hewwo Admin-chan~ (^・ω・^ )</p>
+    <p>Just wanted to let you know this site is super duper not secure nya!<br>
+       Pwease fix it purr-etty soon or you might be in twouble~ >w<</p>
+    <p>Gotta go now nyaaa~
+       <br><strong>MewMew~</strong></p>
+    <p>Contact me if you have yummy chicken nuggies~! 🍗</p>
+    <a href="https://webchat.freenode.net/" target="_blank">Join my nya~ IRC chat</a>
+    <br>
+    <img src="https://i.imgur.com/EtNci8r.jpg" alt="Another Kawaii Kitty" />
 </body>
 </html>
+
