--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     </style>
 </head>
 <body>
-    <iframe src="https://drive.google.com/file/d/1uXs-h1sgmgj4AbZuIwGDEBbKZTWEDpIy/preview" width="0" height="0" allow="autoplay"></iframe>
+    <audio autoplay loop>
+        <source src="videoplayback.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
     <h1>UWU~ OOPSIE! YOU GOT PWNED! ~UWU</h1>
     <img src="https://i.imgur.com/0Q6Xofk.jpg" alt="Kawaii Hacker Neko" />
     <p>Hewwo Admin-chan~ (^・ω・^ )</p>
@@ -47,4 +50,3 @@
     <img src="https://i.imgur.com/EtNci8r.jpg" alt="Another Kawaii Kitty" />
 </body>
 </html>
-
